force-app/main/default/objects/Room__c/fields/Hostel__c.field-meta.xml
<CustomField>
    <fullName>Hostel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hostel</label>
    <referenceTo>Hostel__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>