force-app/main/default/objects/Room__c/fields/Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Room_Number__c</fullName>
    <label>Room Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>